# rust-nextjs-project-cli-builder

./: Cargo.toml
src/: main.rs  os_methods.rs
