[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
camino = "1.1.1"
clap = { version = "4.0.32", features = ["derive"] }
colored = "2.0.0"
execute = "0.2.11"
inquire = { version = "0.5.2", features = ["editor"] }
